# aoc-2023

./: Cargo.toml  README.md
day-01/: Cargo.toml
day-01/benches/: benchmarks.rs
day-01/src/: error.rs  part1.rs  part2.rs
day-02/: Cargo.toml
day-02/benches/: benchmarks.rs
day-02/src/: lib.rs  part1.rs  part2.rs
