[package]
name = "day-02"
version = "0.1.0"
edition = "2021"
authors = ["Allan JARRY <jarry.allan@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
divan = { workspace = true }

[lints]
workspace = true

[[bench]]
name = "day-02"
path = "benches/benchmarks.rs"
harness = false
